# qb-downloader

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Changes.md  Dockerfile  README-CN.md  README.md  README_CN.md  README_CONFIG.md  UPDATE.md  config.yaml  dockerfile  exported_config.toml  pom.xml  tasks.json  test.sh
.github/workflows/: publish.yml  release.yml
src/: app.rs  bencode.rs  config.rs  entity.rs  error.rs  errors.rs  http.rs  lib.rs  main.rs  qb.rs  request.rs  server.rs  task.rs  upload.rs
src/bencode/: error.rs
src/main/java/moe/uchout/qbdownloader/: Main.java
src/main/java/moe/uchout/qbdownloader/action/: BaseAction.java  TaskAction.java  TaskAddAction.java  TaskDeleteAction.java
src/main/java/moe/uchout/qbdownloader/annotation/: Auth.java  Path.java
src/main/java/moe/uchout/qbdownloader/api/: BaseAction.java  ConfigAction.java  LoginAction.java  RootAction.java  StopAction.java  Task.java  TaskAction.java  Test.java  TorrentActon.java  Version.java
src/main/java/moe/uchout/qbdownloader/auth/: AuthUtil.java  MyCacheUtil.java  TokenFileStorage.java
src/main/java/moe/uchout/qbdownloader/entity/: Config.java  Login.java  Result.java  Task.java  TorrentContent.java  TorrentContentNode.java  TorrentsInfo.java
src/main/java/moe/uchout/qbdownloader/enums/: CurrentTaskStatus.java  QbTaskStatus.java  Status.java  Tags.java  TaskStatus.java
src/main/java/moe/uchout/qbdownloader/exception/: OverLimitException.java  QbException.java  SingleFileException.java
src/main/java/moe/uchout/qbdownloader/other/: TimeZoneSerializer.java
src/main/java/moe/uchout/qbdownloader/res/: logback.xml
src/main/java/moe/uchout/qbdownloader/util/: AlistUtil.java  BencodeUtil.java  ConfigUtil.java  (+8 more)
src/main/java/uchout/qbdownloader/entity/: Config.java
src/main/java/uchout/qbdownloader/enums/: QbTaskStatus.java  TaskStatus.java
src/main/java/uchout/qbdownloader/other/: TimeZoneSerializer.java
src/main/java/uchout/qbdownloader/util/: ConfigUtil.java  QbUtil.java  RcloneUtil.java
src/main/res/: logback.xml
src/main/resources/: logback.xml
src/qb/: error.rs  mod.rs  qb_request.rs
src/request/: multipart.rs
src/server/: api.rs  auth.rs  error.rs  mod.rs
src/server/api/: asset.rs  asset_api.rs  auth.rs  config.rs  config_action.rs  config_api.rs  login_action.rs  login_api.rs  task.rs  task_action.rs  task_api.rs  test_action.rs  test_api.rs  torrent.rs  torrent_action.rs  torrent_api.rs  version_api.rs
src/task/: error.rs  handle.rs  metadata.rs  mod.rs  process.rs  resume.rs
src/test/java/moe/util/: UtilTest.java
src/test/java/uchout/qbdownloader/util/: QbUtilTest.java  UtilTest.java
src/uchout/qbdownloader/: Main.java
src/uchout/qbdownloader/annotation/: Path.java
src/uchout/qbdownloader/entity/: Config.java  TorrentContent.java  TorrentsInfo.java
src/uchout/qbdownloader/util/: AlistUtil.java  ConfigUtil.java  GsonStatic.java  QbUtil.java  ServerUtil.java
ui/: index.html  package.json
ui/src/: Login.vue  api.js  style.css
ui/src/home/: App.vue  Config.vue  List.vue  ListItem.vue  Task.vue  Torrent.vue
(+9 files in other folders)
