[package]
name = "qb-downloader"
version = "2.0.1"
edition = "2024"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
pretty_env_logger = "0.5"
log = "0.4"
md5 = "0.7"
reqwest = {version = "0.12", features = ["cookies", "json", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories-next = "2"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "net", "signal"] }
futures = "0.3"
hyper = { version = "1.6", features = ["server"] }
hyper-util = { version = "0.1", features = ["server", "server-graceful"]}
http-body-util = "0.1"
multer = "3.1"
rand = "0.9.2"
rust-embed = "8.7"
mime_guess = "2"
sha1 = "0.10"
bendy = "0.3.3"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
